--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,12 @@
 @import "./variables.scss";
+@import "./Balance.scss";
+@import "./Breakdown.scss";
+@import "./Total.scss";
 
 *, *::before, *::after {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 ul {
@@ -11,9 +15,12 @@ ul {
 
 html {
     font-size: 18px;
+    width: 100vw;
+    height: 100vh;
+    height: 100dvh;
 }
 
-body, html {
+body {
     width: 100%;
     height: 100%;
 }
@@ -27,6 +34,9 @@ body {
 
 main {
     margin: 0 1rem;
+    @media (max-width: 425px) {
+        margin: 0 0.75rem;
+    }
 
     .container {
         background-color: $very-pale-orange;
